--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,9 @@
     ],
     "rules": {
       "no-use-before-define": 0,
+      "react/jsx-props-no-spreading": 0,
       "react/jsx-filename-extension": 0,
-      "react/forbid-prop-types":0
+      "react/forbid-prop-types":0,
+      "jsx-a11y/click-events-have-key-events":0
     }
 }
