--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "stylelint": "^11.0.0",
     "stylelint-config-standard": "^19.0.0",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.6.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.4.0",
     "eslint-config-airbnb": "^18.0.1",
