--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "react"
     ],
     "rules": {
+      "linebreak-style": 0,
       "no-use-before-define": 0,
       "react/jsx-props-no-spreading": 0,
       "react/jsx-filename-extension": 0,
