--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "react/jsx-props-no-spreading": 0,
       "react/jsx-filename-extension": 0,
       "react/forbid-prop-types":0,
-      "jsx-a11y/click-events-have-key-events":0
+      "jsx-a11y/click-events-have-key-events":0,
+      "no-underscore-dangle":0
     }
 }
