--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "sinon": "^7.5.0",
+    "socket.io-client": "^2.3.0",
     "stylelint": "^11.1.1",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-scss": "^3.12.1"
